testsuite/tests/rename/should_fail/RnDefaultSigFail.stderr

RnDefaultSigFail.hs:5:3: error: [GHC-40700]
    Unexpected default signature: default m :: Num a => a
    Suggested fix:
      Perhaps you intended to use the ‘DefaultSignatures’ extension
